more stuff moved, removed and added, bootstrap added

--- a/public/index_build_template.html
+++ b/public/index_build_template.html
@@ -7,7 +7,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
     <title></title>
-    <link rel="stylesheet" href="/built/ean-boilerplate-0.0.1.css" type='text/css'>
+    <link rel="stylesheet" href="/built/<--built css-->" type='text/css'>
     <link rel="shortcut icon" href="/img/icons/favicon.ico">
     <link rel="apple-touch-icon" sizes="57x57" href="/img/apple/apple-touch-icon-57x57-precomposed.png" />
     <link rel="apple-touch-icon" sizes="72x72" href="/img/apple/apple-touch-icon-72x72-precomposed.png" />
