--- a/public/index_build_template.html
+++ b/public/index_build_template.html
@@ -4,17 +4,19 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0, minimum-scale=1.0, maximum-scale=1.0" />
+    <meta name="mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
     <title></title>
     <link rel="stylesheet" href="/built/<--built css-->" type='text/css'>
     <link rel="shortcut icon" href="/img/icons/favicon.ico">
-    <link rel="apple-touch-icon" sizes="57x57" href="/img/apple/apple-touch-icon-57x57-precomposed.png" />
-    <link rel="apple-touch-icon" sizes="72x72" href="/img/apple/apple-touch-icon-72x72-precomposed.png" />
-    <link rel="apple-touch-icon" sizes="114x114" href="/img/apple/apple-touch-icon-114x114-precomposed.png" />
-    <link rel="apple-touch-icon" sizes="144x144" href="/img/apple/apple-touch-icon-144x144-precomposed.png" />
-    <link rel="apple-touch-startup-image" media="screen and (max-device-width: 320px)" href="/img/apple/splash.png">
-    <link rel="apple-touch-startup-image" media="(max-device-width: 480px) and (-webkit-min-device-pixel-ratio: 2)" href="/img/apple/splash2x.png">
+    <link rel="apple-touch-icon" sizes="57x57" href="/img/icons/app-icon-57x57-precomposed.png"/>
+    <link rel="apple-touch-icon" sizes="72x72" href="/img/icons/app-icon-72x72-precomposed.png"/>
+    <link rel="apple-touch-icon" sizes="114x114" href="/img/icons/app-icon-114x114-precomposed.png"/>
+    <link rel="apple-touch-icon" sizes="144x144" href="/img/icons/app-icon-144x144-precomposed.png"/>
+    <link rel="shortcut icon" sizes="144x144" href="/img/icons/app-icon-144x144-precomposed.png">
+    <link rel="apple-touch-startup-image" media="screen and (max-device-width: 320px)" href="/img/icons/splash.png">
+    <link rel="apple-touch-startup-image" media="(max-device-width: 480px) and (-webkit-min-device-pixel-ratio: 2)" href="/img/icons/splash2x.png">
 </head>
 <body>
 
