--- a/public/index_build_template.html
+++ b/public/index_build_template.html
@@ -55,6 +55,15 @@
 
     </div><!-- /.container -->
 
+    <script src="/lib/script.js/dist/script.min.js"></script>
+    <script src="/lib/angular-loader/angular-loader.min.js"></script>
+    <script src="<--built script manifest-->"></script>
+    <script>
+        navigator.standalone = navigator.standalone || (screen.height-document.documentElement.clientHeight<40);
+        $script.ready('scriptManifestReady', function(){
+            angular.bootstrap(document, ['app']);
+        });
+    </script>
+    <script src="http://localhost:35729/livereload.js"></script>
 </body>
-<script src="http://localhost:35729/livereload.js"></script>
 </html>
