--- a/public/index_build_template.html
+++ b/public/index_build_template.html
@@ -45,15 +45,8 @@
             </div><!--/.nav-collapse -->
         </div>
     </div>
-
-    <div class="container">
-
-        <div class="starter-template">
-            <h1>Bootstrap starter template</h1>
-            <p class="lead">Use this document as a way to quickly start any new project.<br> All you get is this text and a mostly barebones HTML document.</p>
-        </div>
-
-    </div><!-- /.container -->
+    <ng-view>
+    </ng-view><!-- /.container -->
 
     <script src="/lib/script.js/dist/script.min.js"></script>
     <script src="/lib/angular-loader/angular-loader.min.js"></script>
