saving few bytes on icon names, favicon only for IE 9 and lower

--- a/public/index_build_template.html
+++ b/public/index_build_template.html
@@ -9,12 +9,14 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
     <title></title>
     <link rel="stylesheet" href="/built/<--built css-->" type='text/css'>
+    <!--[if lte IE 9]>
     <link rel="shortcut icon" href="/img/icons/favicon.ico">
-    <link rel="apple-touch-icon" sizes="57x57" href="/img/icons/app-icon-57x57-precomposed.png"/>
-    <link rel="apple-touch-icon" sizes="72x72" href="/img/icons/app-icon-72x72-precomposed.png"/>
-    <link rel="apple-touch-icon" sizes="114x114" href="/img/icons/app-icon-114x114-precomposed.png"/>
-    <link rel="apple-touch-icon" sizes="144x144" href="/img/icons/app-icon-144x144-precomposed.png"/>
-    <link rel="shortcut icon" sizes="144x144" href="/img/icons/app-icon-144x144-precomposed.png">
+    <![endif]-->
+    <link rel="apple-touch-icon" sizes="57x57" href="/img/icons/app-icon-57x57.png"/>
+    <link rel="apple-touch-icon" sizes="72x72" href="/img/icons/app-icon-72x72.png"/>
+    <link rel="apple-touch-icon" sizes="114x114" href="/img/icons/app-icon-114x114.png"/>
+    <link rel="apple-touch-icon" sizes="144x144" href="/img/icons/app-icon-144x144.png"/>
+    <link rel="shortcut icon" sizes="57x57" href="/img/icons/app-icon-57x57.png">
     <link rel="apple-touch-startup-image" media="screen and (max-device-width: 320px)" href="/img/icons/splash.png">
     <link rel="apple-touch-startup-image" media="(max-device-width: 480px) and (-webkit-min-device-pixel-ratio: 2)" href="/img/icons/splash2x.png">
 </head>
