unit tests and production grunt fixed

--- a/public/index_build_template.html
+++ b/public/index_build_template.html
@@ -52,7 +52,7 @@
     <ng-view>
     </ng-view><!-- /.container -->
 
-	<script src="/built/ean-boilerplate.js"></script>
+	<script src="<-- bundlePath -->"></script>
 	<script>
 		navigator.standalone = navigator.standalone || (screen.height-document.documentElement.clientHeight<40);
 		angular.bootstrap(document, ['app']);
