less compilation readded

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
     <base href="http://localhost:8050/">
     <title></title>
-    <link rel="stylesheet" href="/less/bootstrap.css">
+    <link rel="stylesheet" href="/built/<--pkgName-->.css">
     <!--[if lte IE 9]>
     <link rel="shortcut icon" href="/img/icons/favicon.ico">
     <![endif]-->
